-[ACCEPTANCE] Changed the endpoint name.
Former-commit-id: e13d4d10be6dc131eb4b67305724cbc62ae9176d
